--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -41,9 +41,10 @@ layout: default
 					<div class="button-wrapper flex-row">
 						<div class="button flex-button">
 							<a href="{% if page.auto == true %}https://minhaskamal.github.io/DownGit/#/home?url={% endif %}{{ page.download }}" target="blank">Download</a>
+							<a href="{{ page.download }}" target="blank">Source</a>
 							{% if page.support == nil %}
 							{% else %}
-							<a href="{{ page.support }}" target="blank">Support</a>
+							<a href="{{ page.support }}" target="blank" class="secondary-btn">Support</a>
 							{% endif %}
 						</div>
 					</div>
