--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -43,4 +43,8 @@ $('html').click(function() {
 $(".dropdown").hover(function () {
     $('.nav-link').toggleClass("drop-hover");
  });
+ $(".nav-link").focus(function(){
+	$('.nav-link').toggleClass('open');
+	event.stopPropagation();
+});
 </script>
