--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -257,7 +257,11 @@
 			
             .flex-button {
                 flex-basis: 16%;
-				display: flex;
+				display: block;
+
+				@media #{$above-tablet} {
+					display: flex;
+				}
 				
                 a {
 					margin: 0px 4px 0px 4px;
@@ -274,6 +278,12 @@
 						background-color: unset;
 						color: $brand-color;
 						box-shadow: unset;
+						margin-top: 25px;
+						display: -webkit-inline-box;
+						@media #{$above-tablet} {
+							margin-top: unset;
+							display: unset;
+						}
 						&:hover {
 							background-color: #f1f1f1;
 							color: $brand-color;
