--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -101,6 +101,10 @@ div#gh-comments {
             @media #{$mid-point} {
                 display: unset;
                 margin-top: unset;
+                position: relative;
+                top: 7px;
+                font-size: 15px;
+                padding: 9px 14px;
             }
         }
     }
