--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -324,6 +324,8 @@
 	.product-list {
 		h4 {
 			max-width: calc(100% - 95px);
+			font-size: 14px;
+    		font-weight: 700;
 		}
 	}
 }
@@ -354,7 +356,10 @@
 	h5 {
 		margin: unset;
 		font-weight: inherit;
-		font-size: 0.7em;
+		font-size: 12px;
+		font-style: italic;
+		margin-top: -5px;
+		color: #999;
 	}
 
 	p {
