--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -155,7 +155,7 @@
 			display: flex;
 			flex-direction: column;
 			.product-description {
-				font-size: 0.9em;
+				font-size: 13px;
 				line-height: 22px;
 			}
 		}
@@ -324,7 +324,7 @@
 	.product-list {
 		h4 {
 			max-width: calc(100% - 95px);
-			font-size: 14px;
+			font-size: 16px;
     		font-weight: 700;
 		}
 	}
@@ -468,7 +468,7 @@
 			}
 
 			.card-date {
-				margin-top: unset;
+				margin-top: -5px;
 			}
 
 			.product-details {
@@ -485,7 +485,7 @@
 				}
 				.product-description {
 					padding: 14px 15px 0px 15px;
-					font-size: 0.9em;
+					font-size: 13px;
 					line-height: 22px;
 				}
 			}
