--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -35,6 +35,7 @@
 		font-size: 3.2rem;
 		line-height: 1.3;
 		font-weight: bold;
+		word-break: break-word;
 	}
 	.hero-paragraph {
 		padding: 10px 0px;
