--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -279,6 +279,22 @@
 							margin-top: -8px;
 						}
 					}
+					&.third-btn {
+						color: $brand-color;
+						background: unset;
+						box-shadow: unset;
+						border: 1px solid $brand-color;
+						&:hover {
+							border-color: darken($brand-color, 10%);
+							color: #e2e2e2;
+							background-color: darken($brand-color, 10%);
+						}
+						&:focus, &:active {
+							border-color: darken($brand-color, 20%);
+							color: #fff;
+							background-color: darken($brand-color, 10%);
+						}
+					}
 					&.secondary-btn {
 						background-color: unset;
 						color: $brand-color;
