--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -59,9 +59,12 @@ layout: compress
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NG6W33N" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<header>
-		<div class="container">
-			<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %}</a></div>
-			{% include navigation.html %}
+		
+		<div class="nav-container">
+			<div class="container">
+				<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %}</a></div>
+				{% include navigation.html %}
+			</div>
 		</div>
 
 		<section class="hero flex-row">
