--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -119,19 +119,28 @@ header {
 			svg {
 				height: 50px;
     			width: 90px;
-				transition: .2s linear width, .2s linear height;
+				transition: .5s ease height, .5s ease width;
 			}
 			span {
 				font-size: 25px;
 			}
 		}
 	}
-
+	@keyframes top {
+		from {
+			top: -70px;
+		}
+		to {
+			top: 0px;
+		}
+	}
 	> .container.navbar-scroll, > .nav-container .container.navbar-scroll {
 		background-color: #262626;
 		box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.3);
 		position: fixed;
-		top: 0px;
+		animation: top .8s forwards;
+		animation-timing-function: ease;
+		top: -70px;
 
 		nav {
 			margin-top: 13px;
@@ -152,7 +161,8 @@ header {
 			top: 9px;
 			svg {
 				height: 40px;
-    			width: 75px;
+				width: 75px;
+				transition: .5s ease height, .5s ease width;
 			}
 
 			span {
